--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2V0LXVyY2hpbi04Mi5jbGVyay5hY2NvdW50cy5kZXYk
+
+CLERK_SECRET_KEY=sk_test_rTcjWDrZv3fMFVwxhe7WIIAZmJQjq3Pjw3LuDRt7SI
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
