Replacing the mongodb database with a postgresql database

--- a/.env
+++ b/.env
@@ -7,5 +7,4 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
-# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/pythagoreDB?schema=public"
-DATABASE_URL="mongodb+srv://esakicodeur:1kRmSUAqN5bxniod@cluster0.dssgzsv.mongodb.net/pythagore?retryWrites=true&w=majority"
+DATABASE_URL="postgresql://postgres:alex27@localhost:5432/pythagoreDB?schema=public"
