--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev -p 4000",
+    "build": "next build -p 4000",
     "start": "next start",
     "lint": "next lint"
   },
@@ -54,6 +54,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.10.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
