--- a/.env
+++ b/.env
@@ -15,3 +15,5 @@ UPLOADTHING_APP_ID=140xrqp2cq
 LIVEKIT_API_KEY=APIPrNHeateHAmC
 LIVEKIT_API_SECRET=uMeeeFHf8p5Yyz0vKNCUnk6QcnfkH7eHfNrdvuWlUuhJ
 NEXT_PUBLIC_LIVEKIT_URL=wss://pythagore-g2ssld1t.livekit.cloud
+
+# NEXT_PUBLIC_SITE_URL=http://chat.academiedeselites.com
